grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana 
  labels:
    app.kubernetes.io/name: grafana
spec:
  ports:
    - port: 4001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: grafana 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana 
  labels:
    app.kubernetes.io/name: grafana 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana 
    spec:
      containers:
        - name: grafana 
          image: teslamate/grafana:1.20.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000 
              protocol: TCP
