teslamate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
spec:
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: teslamate

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
