teslamateapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamateapi 
  labels:
    app: teslamateapi 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: teslamateapi 
  template:
    metadata:
      labels:
        app: teslamateapi 
    spec:
      containers:
      - name: teslamatepai 
        image: tobiasehlert/teslamateapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: teslamateapi 
spec:
  ports:
  - port: 18080 
    targetPort: 8080 
    name: api 
    protocol: TCP
  type: LoadBalancer
  selector:
    app: teslamateapi
