ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: teslamate-teslamate-traefik-forward-auth@kubernetescrd
spec:
  tls:
    - secretName: teslamate-bender-sway-org-tls
      hosts:
        - teslamate.bender.sway.org 
  rules:
  - host: teslamate.bender.sway.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teslamate 
            port:
              number: 4000 
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana 
            port:
              number: 4001 
      - path: /whoami
        pathType: Prefix
        backend:
          service:
            name: whoami 
            port:
              number: 80
